--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>My Projects</h1>
-    <a href="projects/productpreviewcard"><h2>Product preview card component</h2></a>
+    <a href="projects/productpreviewcard">Product preview card component</a>
     
 </body>
 </html>
